Signup: Fix UI glitch on on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -96,9 +96,6 @@ button.btn-secondary-revert {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  max-height: 100%;
-  min-height: 70%;
-  padding: 20px;
 }
 
 .center {
